[package]
name = "hello-iceberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iceberg = { git = "https://github.com/apache/iceberg-rust" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

